// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`00: empty inputs 1`] = `
Object {
  "input": "",
  "tokens": Array [],
}
`;

exports[`00: empty inputs 2`] = `
Object {
  "input": "[r][n]",
  "tokens": Array [
    Array [
      "NewLine",
      "[r][n]",
    ],
  ],
}
`;

exports[`01: white space tokens 1`] = `
Object {
  "input": " [t] abc   [r][n]def  [n]  ghi[n][r]  ",
  "tokens": Array [
    Array [
      "Spaces",
      " [t] ",
    ],
    Array [
      "Text",
      "abc",
    ],
    Array [
      "Spaces",
      "   ",
    ],
    Array [
      "NewLine",
      "[r][n]",
    ],
    Array [
      "Text",
      "def",
    ],
    Array [
      "Spaces",
      "  ",
    ],
    Array [
      "NewLine",
      "[n]",
    ],
    Array [
      "Spaces",
      "  ",
    ],
    Array [
      "Text",
      "ghi",
    ],
    Array [
      "NewLine",
      "[n]",
    ],
    Array [
      "NewLine",
      "[r]",
    ],
    Array [
      "Spaces",
      "  ",
    ],
  ],
}
`;

exports[`02: text with escapes 1`] = `
Object {
  "input": " ab+56[b]>qrst(abc[b]))",
  "tokens": Array [
    Array [
      "Spaces",
      " ",
    ],
    Array [
      "Text",
      "ab",
    ],
    Array [
      "Other",
      "+",
    ],
    Array [
      "Text",
      "56>qrst",
    ],
    Array [
      "Other",
      "(",
    ],
    Array [
      "Text",
      "abc)",
    ],
    Array [
      "Other",
      ")",
    ],
  ],
}
`;

exports[`03: The && operator 1`] = `
Object {
  "input": "&&abc&&cde&&",
  "tokens": Array [
    Array [
      "AndIf",
      "&&",
    ],
    Array [
      "Text",
      "abc",
    ],
    Array [
      "AndIf",
      "&&",
    ],
    Array [
      "Text",
      "cde",
    ],
    Array [
      "AndIf",
      "&&",
    ],
  ],
}
`;

exports[`03: The && operator 2`] = `
Object {
  "input": "a&b",
  "tokens": Array [
    Array [
      "Text",
      "a",
    ],
    Array [
      "Other",
      "&",
    ],
    Array [
      "Text",
      "b",
    ],
  ],
}
`;

exports[`03: The && operator 3`] = `
Object {
  "input": "&&",
  "tokens": Array [
    Array [
      "AndIf",
      "&&",
    ],
  ],
}
`;

exports[`03: The && operator 4`] = `
Object {
  "input": "&",
  "tokens": Array [
    Array [
      "Other",
      "&",
    ],
  ],
}
`;

exports[`04: dollar variables 1`] = `
Object {
  "input": "$abc123.456",
  "tokens": Array [
    Array [
      "DollarVariable",
      "abc123",
    ],
    Array [
      "Other",
      ".",
    ],
    Array [
      "Text",
      "456",
    ],
  ],
}
`;

exports[`04: dollar variables 2`] = `
Object {
  "input": "$ab$_90",
  "tokens": Array [
    Array [
      "DollarVariable",
      "ab",
    ],
    Array [
      "DollarVariable",
      "_90",
    ],
  ],
}
`;

exports[`05: double-quoted strings 1`] = `
Object {
  "input": "what \\"is\\" is",
  "tokens": Array [
    Array [
      "Text",
      "what",
    ],
    Array [
      "Spaces",
      " ",
    ],
    Array [
      "DoubleQuotedText",
      "is",
    ],
    Array [
      "Spaces",
      " ",
    ],
    Array [
      "Text",
      "is",
    ],
  ],
}
`;

exports[`05: double-quoted strings 2`] = `
Object {
  "input": "what\\"is\\"is",
  "tokens": Array [
    Array [
      "Text",
      "what",
    ],
    Array [
      "DoubleQuotedText",
      "is",
    ],
    Array [
      "Text",
      "is",
    ],
  ],
}
`;

exports[`05: double-quoted strings 3`] = `
Object {
  "input": "what\\"is[b]\\"\\"is",
  "tokens": Array [
    Array [
      "Text",
      "what",
    ],
    Array [
      "DoubleQuotedText",
      "is\\"",
    ],
    Array [
      "Text",
      "is",
    ],
  ],
}
`;

exports[`05: double-quoted strings 4`] = `
Object {
  "input": "no C-style escapes: \\"[b]t[b]r[b]n\\"",
  "tokens": Array [
    Array [
      "Text",
      "no",
    ],
    Array [
      "Spaces",
      " ",
    ],
    Array [
      "Text",
      "C",
    ],
    Array [
      "Other",
      "-",
    ],
    Array [
      "Text",
      "style",
    ],
    Array [
      "Spaces",
      " ",
    ],
    Array [
      "Text",
      "escapes",
    ],
    Array [
      "Other",
      ":",
    ],
    Array [
      "Spaces",
      " ",
    ],
    Array [
      "DoubleQuotedText",
      "trn",
    ],
  ],
}
`;
